demo/maint.tf
provider "aws" {
    region = "eu-west-3"
}

variable "vpc_cidr_block" {}
variable "subnet_cidr_block" {}
variable "avail_zone" {}
variable "env_prefix" {}
variable "my_ip" {}
variable "instance_type" {}
variable "key_pair_name" {}
variable "public_key_location" {}



resource "aws_vpc" "myapp-vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name: "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "myapp-subnet-1" {
  vpc_id = aws_vpc.myapp-vpc.id
  cidr_block = var.subnet_cidr_block
  availability_zone = var.avail_zone
  tags = {
    Name: "${var.env_prefix}-subnet-1"
  }
}


resource "aws_internet_gateway" "myapp-igw" {
  vpc_id = aws_vpc.myapp-vpc.id
   
  tags = {
    Name: "${var.env_prefix}-igw"
  }
}


resource "aws_route_table" "myapp-route-table" {
  vpc_id = aws_vpc.myapp-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp-igw.id
  }

  tags = {
    Name: "${var.env_prefix}-rtb"
  }
}



resource "aws_route_table_association" "a-rtb-subnet" {
  subnet_id = aws_subnet.myapp-subnet-1.id
  route_table_id = aws_route_table.myapp-route-table.id
}


resource "aws_security_group" "myapp-sg" {
  name = "myapp-sg"
  vpc_id = aws_vpc.myapp-vpc.id
  # Incoming Traffic
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # Outcoming Traffic
  egress {
    from_port = 0 # 0 any port
    to_port = 0 # 0 any port
    protocol = "-1"  # -1 any protocol
    cidr_blocks = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

    tags = {
        Name: "${var.env_prefix}-sg"
    }

}
/*
data "aws_ami" "latest-image" {
    most_recent = true
    owners = ["amazon"]
    filter {
      name = "name"
      value = ["amzn2-ami-hvm-*-x86_64-gp2"]
    }
}
*/

resource "aws_key_pair" "myapp-ssh-key" {
    key_name = "myapp_key_pair"
    public_key = file(var.public_key_location)
  
}

resource "aws_instance" "nmyapp-server" {
  ami = "ami-0eb375f24fdf647b8"
  instance_type = var.instance_type

  subnet_id = aws_subnet.myapp-subnet-1.id
  vpc_security_group_ids = [aws_security_group.myapp-sg.id]
  availability_zone = var.avail_zone

  associate_public_ip_address = true
  key_name = aws_key_pair.myapp-ssh-key.key_name

# User_data block is executed once, on the first time running the instance
/*  user_data = <<EOF
                    #!/bin/bash
                    sudo yum update -y && sudo yum install docker -y
                    sudo systemctl start docker 
                    sudo usermod -aG docker ec2-user
                    docker run -p 8080:80 nginx

                EOF
*/
  user_data = file("entry-script.sh")

  tags = {
    Name: "${var.env_prefix}-server"
  }

}
